Bug fixes in Omni Search view: scroll through all the secondary filters. Allow tritary filter filter to collapse after expanding.

--- a/webapp/src/app/shared/main-filter/main-filter.component.css
+++ b/webapp/src/app/shared/main-filter/main-filter.component.css
@@ -3,9 +3,9 @@
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
  * this file except in compliance with the License. A copy of the License is located at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * or in the "license" file accompanying this file. This file is distributed on
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
  * implied. See the License for the specific language governing permissions and
@@ -47,6 +47,9 @@
   transform-origin: 0% 0%;
   transition: all .5s;
   background-color: #fbfbfb;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .each-filter-column:first-child {
@@ -82,10 +85,13 @@
   font-family: ex2-light;
   font-size: 0.9em;
 }
+
 .each-filter-desc {
   overflow-y: auto;
-  height: 95%;
+  height: 100%;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 .active {
   background-color: #e20074;
@@ -199,7 +205,7 @@ input:checked ~ .filter-dropDdown-arrow {
   min-width: 10em;
   height: 100%;
   transform: translate(-101%);
-  
+
 }
 .filter-show{
   transform: translate(0);
